--- a/styles/style.css
+++ b/styles/style.css
@@ -2,17 +2,70 @@
     padding:0;
     margin:0;
 }
+.stickToTop{
+    position:fixed;
+    width:100%;
+    z-index:1
+}
 #navBar{
     width:100%;
     overflow:hidden;
+    color:#000;
+    background-color:#fff;
+    letter-spacing:4px;
+    padding:8px 16px;
+    box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+}
+.rightFloat{
+    float:right;
+}
+.navLink{
+    border:none;
+    display:inline-block;
+    padding:8px 16px;
+    vertical-align:middle;
+    overflow:hidden;
+    text-decoration:none;
+    color:inherit;
+    background-color:inherit;
+    text-align:center;
+    cursor:pointer;
+    white-space:nowrap;
+    float:left;
+    width:auto;
+    outline:0;
+}
+#pageContent{
+    margin-left:auto;
+    margin-right:auto;
+    padding:8px 16px;
 }
 .inputField{
     padding:8px;
     display:block;
-    border:none;
-    border-bottom:1px solid #ccc;
     width:100%;
-    margin-top:16px!important;
-    margin-bottom:16px!important;
-    border: 1px solid #ccc!important;
+    margin-top:16px;
+    margin-bottom:16px;
+    border: 1px solid #ccc;
+}
+#contactContainer, #aboutContainer, #projectContainer{
+    padding:0.01em 16px;
+    padding-top:32px;
+}
+.contactSubmitBtn{
+    width:100%;
+}
+.sectionTitle{
+    border-color:#f1f1f1;
+    border-bottom:1px solid #ccc;
+    padding-top:16px;
+    padding-bottom:16px;
+}
+footer{
+    display:inline-block;
+    width:auto;
+    color:#fff;
+    background-color:#000;
+    padding-top:16px;
+    padding-bottom:16px;
 }
