--- a/styles/style.css
+++ b/styles/style.css
@@ -22,20 +22,28 @@ body{
     width:100%;
     z-index:1;
 }
+.navLink b{
+    border: 2px solid #fff;
+    padding: 5px;
+}
 #navBar{
     width:100%;
+    height: 10%;
     overflow:hidden;
-    color:#000;
-    background-color:#fff;
+    color:#fff;
+    background-color:#000;
     letter-spacing:4px;
     padding:8px 16px;
     box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
 }
-#navBar a:hover{
-    background-color: lightgrey;
+.rightFloat a:hover{
+    border-bottom: 2px solid #fff;
+    padding-bottom: 5px;
+    border-radius: 5px;
 }
 #navBar a{
-    font-family:Verdana, Geneva, sans-serif ;
+    font-family:Verdana, Geneva, sans-serif;
+    margin-right: 10px;
 }
 .rightFloat{
     margin-right: 20px;
